force-app/main/default/objects/QuoteLineItem/fields/Codice_Listino__c.field-meta.xml
<CustomField>
    <fullName>Codice_Listino__c</fullName>
    <formula>PricebookEntry.Codice_Listino__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice Listino</label>
    <type>Text</type>
</CustomField>