force-app/main/default/objects/QuoteLineItem/fields/Descrizione_richiesta_speciale__c.field-meta.xml
<CustomField>
    <fullName>Descrizione_richiesta_speciale__c</fullName>
    <label>Descrizione richiesta speciale</label>
    <type>TextArea</type>
</CustomField>