force-app/main/default/objects/QuoteLineItem/fields/Netto_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Netto_Dealer__c</fullName>
    <label>Dealer Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>