force-app/main/default/objects/QuoteLineItem/fields/Netto_Riga__c.field-meta.xml
<CustomField>
    <fullName>Netto_Riga__c</fullName>
    <formula>if( ispickval( Product2.Family ,&quot;Services&quot;),
 UnitPrice *  Quantity,
Quote.Sconto_Standard_perc__c *  UnitPrice *  Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netto Riga</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>