force-app/main/default/objects/QuoteLineItem/fields/Prezzo_finale_c_o__c.field-meta.xml
<CustomField>
    <fullName>Prezzo_finale_c_o__c</fullName>
    <inlineHelpText>Prezzo arrotondando dall&apos;amministrazione per far corrispondere il prezzo messo a mano dal commerciale</inlineHelpText>
    <label>Prezzo finale c/o</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>