force-app/main/default/objects/QuoteLineItem/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>IF( ISBLANK( Descrizione_richiesta_speciale__c ),  Product2.Name ,  Descrizione_richiesta_speciale__c )</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>